Fix uneven sizing of grid rows

--- a/css/style.css
+++ b/css/style.css
@@ -306,29 +306,38 @@ body {
 .footer {
   background-color: #101d2c;
   grid-column: full-start/full-end;
-  padding: 32px;
+  padding: 64px;
 }
 
 .nav {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-  text-align: center;
+  grid-auto-rows: 128px;
   grid-gap: 16px;
+  align-items: center;
+  text-align: center;
   list-style: none;
   font-family: "Josefin Sans", sans-serif;
   font-weight: 400;
 }
-.nav__link {
-  cursor: pointer;
-  outline: none;
-  border: none;
+.nav__item {
   background-color: rgba(198, 153, 99, 0.05);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.nav__link:link, .nav__link:visited {
+  width: 100%;
+  height: 100%;
   text-decoration: none;
   font-size: 16px;
   color: #c69963;
-  padding: 16px;
-  width: 100%;
-  height: 64px;
+  padding: 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /*# sourceMappingURL=style.css.map */
