--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,31 +1,40 @@
 .footer {
     background-color: $color-secondary;
     grid-column: full-start / full-end;
-    padding: $default-font-size * 2;
+    padding: $default-font-size * 4;
 
 }
 
 .nav {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-    text-align: center;
+    grid-auto-rows: $default-font-size * 8;
     grid-gap: $default-font-size;
+    align-items: center;
+
+
+    text-align: center;
     list-style: none;
     font-family: $font-display;
     font-weight: 400;
+
     &__item {
-    }
-    &__link {
-        cursor: pointer;
-        outline: none;
-        border: none;
         background-color: rgba($color-primary, .05);
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    &__link:link, &__link:visited {
+        width: 100%;
+        height: 100%;
         text-decoration: none;
         font-size: $default-font-size;
         color: $color-primary;
-        padding: $default-font-size ;
-        width: 100%;
-        height: $default-font-size * 4;
+        padding: $default-font-size * 2;
+        display:flex;
+        justify-content: center;
+        align-items: center;
     }
-    
 }
